--- a/ui basics - uikit/ui basics - uikit/Base.lproj/Main.storyboard
+++ b/ui basics - uikit/ui basics - uikit/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--UI Basics-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ui_basics___uikit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" title="UI Basics" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="ui_basics___uikit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="440" height="956"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -122,7 +122,6 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="FaD-tH-rdW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Av9-68-4PO"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="FaD-tH-rdW" secondAttribute="bottom" id="RWq-3y-qPC"/>
                             <constraint firstItem="FaD-tH-rdW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Tjj-9u-DAk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FaD-tH-rdW" secondAttribute="trailing" id="hNR-cb-jAJ"/>
                         </constraints>
